[MOVED FROM BAD] more fixes
Original commit message from CVS:
more fixes

--- a/gst-plugins-good/gst/y4m/Makefile.am
+++ b/gst-plugins-good/gst/y4m/Makefile.am
@@ -1,6 +1,6 @@
 plugindir = $(libdir)/gst
 
-filter_LTLIBRARIES = libgsty4mencode.la
+plugin_LTLIBRARIES = libgsty4mencode.la
 
 libgsty4mencode_la_SOURCES = gsty4mencode.c
 libgsty4mencode_la_CFLAGS = $(GST_CFLAGS)
