[MOVED FROM BAD] s/filter/plugin/ link plugins to GST_LIBS rearrange rules to a common format
Original commit message from CVS:
* s/filter/plugin/
* link plugins to GST_LIBS
* rearrange rules to a common format

--- a/gst-plugins-good/gst/y4m/Makefile.am
+++ b/gst-plugins-good/gst/y4m/Makefile.am
@@ -4,5 +4,6 @@ plugin_LTLIBRARIES = libgsty4mencode.la
 
 libgsty4mencode_la_SOURCES = gsty4mencode.c
 libgsty4mencode_la_CFLAGS = $(GST_CFLAGS)
+libgsty4mencode_la_LIBADD = $(GST_LIBS)
 
 noinst_HEADERS = gsty4mencode.h
