[MOVED FROM BAD] removal of //-style comments don't link plugins to core libs -- the versioning is done internally to the plugins with...
Original commit message from CVS:
* removal of //-style comments
* don't link plugins to core libs -- the versioning is done internally to the plugins with the plugin_info struct,
and symbol resolution is lazy, so we can always know if a plugin can be loaded by the plugin_info data. in theory.

--- a/gst-plugins-good/gst/y4m/Makefile.am
+++ b/gst-plugins-good/gst/y4m/Makefile.am
@@ -4,7 +4,7 @@ plugin_LTLIBRARIES = libgsty4mencode.la
 
 libgsty4mencode_la_SOURCES = gsty4mencode.c
 libgsty4mencode_la_CFLAGS = $(GST_CFLAGS)
-libgsty4mencode_la_LIBADD = $(GST_LIBS)
+libgsty4mencode_la_LIBADD =
 libgsty4mencode_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
 noinst_HEADERS = gsty4mencode.h
