--- a/gst-plugins-bad/gst/y4m/Makefile.am
+++ b/gst-plugins-bad/gst/y4m/Makefile.am
@@ -1,10 +1,10 @@
 plugindir = $(libdir)/gst
 
-plugin_LTLIBRARIES = libgsty4mencode.la
+plugin_LTLIBRARIES = libgsty4menc.la
 
-libgsty4mencode_la_SOURCES = gsty4mencode.c
-libgsty4mencode_la_CFLAGS = $(GST_CFLAGS)
-libgsty4mencode_la_LIBADD =
-libgsty4mencode_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
+libgsty4menc_la_SOURCES = gsty4mencode.c
+libgsty4menc_la_CFLAGS = $(GST_CFLAGS)
+libgsty4menc_la_LIBADD =
+libgsty4menc_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
 noinst_HEADERS = gsty4mencode.h
