--- a/gst-plugins-good/ext/Makefile.am
+++ b/gst-plugins-good/ext/Makefile.am
@@ -46,10 +46,10 @@ else
 CDPARANOIA_DIR=
 endif
 
-if USE_DV
-DV_DIR=dv
+if USE_LIBDV
+LIBDV_DIR=dv
 else
-DV_DIR=
+LIBDV_DIR=
 endif
 
 if USE_DVDREAD
@@ -228,9 +228,9 @@ endif
 
 SUBDIRS=$(A52DEC_DIR) $(AALIB_DIR) $(ALSA_DIR) \
         $(ARTS_DIR) $(ARTSC_DIR) $(AUDIOFILE_DIR) \
-	$(AVIFILE_DIR) $(CDPARANOIA_DIR) $(DV_DIR) \
+	$(AVIFILE_DIR) $(CDPARANOIA_DIR) $(LIBDV_DIR) \
 	$(DVDREAD_DIR) $(DVDNAV_DIR) $(ESD_DIR) \
-	$(FESTIVAL_DIR) $(FLAC_DIR) $(GNOMEVFS_DIR) $(GSM_DIR) \
+	$(FLAC_DIR) $(GNOMEVFS_DIR) $(GSM_DIR) \
 	$(HERMES_DIR) $(HTTP_DIR) $(JACK_DIR) $(JPEG_DIR) \
 	$(LADSPA_DIR) $(LAME_DIR) $(LCS_DIR) $(LIBFAME_DIR) \
 	$(MAD_DIR) $(MIKMOD_DIR) $(MJPEGTOOLS_DIR) $(MPEG2DEC_DIR) \
@@ -242,7 +242,7 @@ DIST_SUBDIRS=\
 	a52dec aalib alsa \
 	arts artsd avifile \
 	audiofile cdparanoia dv \
-	dvdread dvdnav esd festival ffmpeg \
+	dvdread dvdnav esd ffmpeg \
 	flac gnomevfs gsm \
 	hermes http jack jpeg \
 	ladspa lame lcs libfame \
