- Removed bufferpool code and move that to gstbuffer.c
Original commit message from CVS:
- Removed bufferpool code and move that to gstbuffer.c
- implemented refcounting on GstData
- implemented new buffer code based on Company's work in the EVENTS2 branch
- added boxed types for GstData/GstEvent/GstBuffer/GstBufferPool
- added refcounting to bufferpools and events
- use lockfree allocation for buffers
- simplified the clock, use lockfree allocation
- use GQueue in GstQueue for faster access to the tail element
- update core plugins to the new event API

--- a/gstreamer/gst/Makefile.am
+++ b/gstreamer/gst/Makefile.am
@@ -55,15 +55,16 @@ libgstreamer_la_SOURCES =		\
 	$(GST_AUTOPLUG_SRC)	\
 	gstbin.c		\
 	gstbuffer.c		\
-	gstbufferpool.c		\
 	gstcaps.c		\
 	gstclock.c		\
 	gstcpu.c		\
+	gstdata.c		\
 	gstelement.c		\
 	gstelementfactory.c	\
 	gstevent.c		\
 	gstextratypes.c		\
 	gstinfo.c		\
+	gstmemchunk.c		\
 	gstpad.c		\
 	gstpipeline.c		\
 	gstplugin.c		\
@@ -125,6 +126,7 @@ distclean-local:
 libgstreamerincludedir = $(includedir)/gstreamer-@VERSION@/gst
 libgstreamerinclude_HEADERS =		\
 	gst.h			\
+	gstatomic.h		\
 	gstconfig.h		\
 	gstmarshal.h		\
 	gstenumtypes.h		\
@@ -133,7 +135,6 @@ libgstreamerinclude_HEADERS =		\
 	gstautoplug.h		\
 	gstbin.h		\
 	gstbuffer.h		\
-	gstbufferpool.h		\
 	gstcaps.h		\
 	gstclock.h		\
 	gstcpu.h		\
@@ -144,6 +145,7 @@ libgstreamerinclude_HEADERS =		\
 	gstformat.h		\
 	gstinfo.h		\
 	gstlog.h		\
+	gstmemchunk.h		\
 	gstpad.h		\
 	gstpipeline.h		\
 	gstplugin.h		\
