--- a/gstreamer/configure.ac
+++ b/gstreamer/configure.ac
@@ -140,9 +140,29 @@ AC_SUBST(LIBXML_PKG)
 AC_SUBST(XML_LIBS)
 AC_SUBST(XML_CFLAGS)
 
+dnl popt checks
 GST_CHECK_LIBHEADER(POPT, popt, poptStrippedArgv,, popt.h, POPT_LIBS="-lpopt",
-  AC_MSG_ERROR([popt 1.5 or newer is required to build gstreamer. You can
-download the latest version from ftp://people.redhat.com/sopwith/popt/]))
+  AC_MSG_ERROR([popt 1.6.1 or newer is required to build gstreamer. You can
+                download the latest version from 
+                ftp://people.redhat.com/sopwith/popt/])
+)
+AC_MSG_NOTICE(Checking for POPT_TABLEEND)
+AC_TRY_RUN([
+#include <popt.h>
+int main ()
+{
+#ifndef POPT_TABLEEND
+  return 1;
+#else
+  return 0;
+#endif
+}
+],, [
+  dnl it failed
+  AC_MSG_ERROR([popt 1.6.1 or newer is required to build gstreamer. You can
+                download the latest version from 
+                ftp://people.redhat.com/sopwith/popt/])
+])
 
 dnl Check for atomic.h
 dnl Note: use AC_CHECK_HEADER not AC_CHECK_HEADERS, because the latter
