Added more videocrop config..
Original commit message from CVS:
Added more videocrop config..

--- a/gst-plugins-bad/configure.ac
+++ b/gst-plugins-bad/configure.ac
@@ -216,7 +216,7 @@ GST_PLUGINS_ALL="\
         mpegaudio mpegaudioparse mpegstream mpegtypes modplug\
         monoscope passthrough playondemand qtdemux rtjpeg silence sine\
         smooth spectrum speed stereo stereomono\
-        synaesthesia udp videoscale volenv volume vumeter wavparse y4m"
+        synaesthesia udp videocrop videoscale volenv volume vumeter wavparse y4m"
 
 AC_SUBST(GST_PLUGINS_ALL)
 
