Fixed the missing .h file and some reorg (not sure what's best)
Original commit message from CVS:
Fixed the missing .h file and some reorg (not sure what's best)

--- a/gstreamer/gst/Makefile.am
+++ b/gstreamer/gst/Makefile.am
@@ -136,6 +136,7 @@ libgstreamerinclude_HEADERS =		\
 	gstautoplug.h		\
 	gstbin.h		\
 	gstbuffer.h		\
+	gstbufferpool-default.h \
 	gstcaps.h		\
 	gstclock.h		\
 	gstcpu.h		\
@@ -169,8 +170,7 @@ libgstreamerinclude_HEADERS =		\
 noinst_HEADERS = 		\
 	gst_private.h		\
 	gstarch.h		\
-	cothreads.h		\
-	gstbufferpool-default.h
+	cothreads.h		
 
 libgstreamer_la_CFLAGS = -D_GNU_SOURCE -DGST_CONFIG_DIR=\""$(GST_CONFIG_DIR)"\" \
 	$(LIBGST_CFLAGS) \
