- Added a little testapp for pad disable using two bins in a pipeline
Original commit message from CVS:
- Added a little testapp for pad disable using two bins in a pipeline

--- a/gstreamer/examples/Makefile.am
+++ b/gstreamer/examples/Makefile.am
@@ -7,10 +7,10 @@ endif
 SUBDIRS = autoplug $(GST_LOADSAVE_DIRS) \
           helloworld helloworld2 \
           queue queue2 queue3 queue4 \
-          launch thread plugins mixer cutter
+          launch thread plugins mixer cutter pingpong
 
 DIST_SUBDIRS = autoplug \
           helloworld helloworld2 \
           queue queue2 queue3 queue4 \
-          launch thread xml plugins typefind mixer cutter
+          launch thread xml plugins typefind mixer cutter pingpong
 
