Make the formats dynamic so that plugins can register new seek/query formats
Original commit message from CVS:
Make the formats dynamic so that plugins can register new seek/query
formats

--- a/gstreamer/gst/Makefile.am
+++ b/gstreamer/gst/Makefile.am
@@ -64,6 +64,7 @@ libgstreamer_la_SOURCES =		\
 	gstelementfactory.c	\
 	gstevent.c		\
 	gstextratypes.c		\
+	gstformat.c		\
 	gstinfo.c		\
 	gstmemchunk.c		\
 	gstpad.c		\
