--- a/gst-plugins-bad/sys/cdrom/Makefile.am
+++ b/gst-plugins-bad/sys/cdrom/Makefile.am
@@ -7,4 +7,4 @@ libgstcdplayer_la_CFLAGS = $(GST_CFLAGS)
 libgstcdplayer_la_LIBADD =
 libgstcdplayer_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
-noinst_HEADERS = gstcdplayer.h gstcdplayer_ioctl.h
+noinst_HEADERS = gstcdplayer.h gstcdplayer_ioctl.h gstcdplayer_ioctl_solaris.h gstcdplayer_ioctl_bsd.h
