--- a/gstreamer/tests/Makefile.am
+++ b/gstreamer/tests/Makefile.am
@@ -6,7 +6,7 @@ else
 NASMDEP_DIR=
 endif
 
-SUBDIRS = $(NASMDEP_DIR) muxing sched threadstate
+SUBDIRS = $(NASMDEP_DIR) muxing sched threadstate seeking
 
 noinst_PROGRAMS = lat
 
@@ -14,4 +14,4 @@ lat_CFLAGS = $(GST_CFLAGS)
 lat_LDFLAGS = $(GST_LIBS)
 
 EXTRA_DIST = README
-DIST_SUBDIRS= bufspeed memchunk muxing sched threadstate
+DIST_SUBDIRS= bufspeed memchunk muxing sched threadstate seeking
