Updated TODO list
Original commit message from CVS:
Updated TODO list
Added segment seeking experiment Makefile

--- a/gstreamer/configure.ac
+++ b/gstreamer/configure.ac
@@ -465,6 +465,7 @@ tests/Makefile
 tests/bufspeed/Makefile
 tests/memchunk/Makefile
 tests/muxing/Makefile
+tests/seeking/Makefile
 tests/sched/Makefile
 tests/threadstate/Makefile
 testsuite/Makefile
