--- a/gst-plugins-base/gst-libs/gst/Makefile.am
+++ b/gst-plugins-base/gst-libs/gst/Makefile.am
@@ -1,3 +1,9 @@
-SUBDIRS = audio idct resample riff floatcast gconf
+if USE_GCONF
+GCONF_DIR=gconf
+else
+GCONF_DIR=
+endif
+
+SUBDIRS = audio idct resample riff floatcast $(GCONF_DIR)
 
 DIST_SUBDIRS = audio idct resample riff floatcast gconf
