--- a/gstreamer/configure.ac
+++ b/gstreamer/configure.ac
@@ -59,12 +59,14 @@ GST_DOC()
 GST_ARCH()
 
 dnl we require bison for building of some of the marshal files
+dnl FIXME: check if AC_PROG_YACC is suitable here
 AC_PATH_PROG(BISON_PATH, bison, no)
 if test x$BISON_PATH = xno; then
   AC_MSG_ERROR(Could not find bison)
 fi
 
 dnl we require flex for building the parser
+dnl FIXME: check if AC_PROG_LEX is suitable here
 AC_PATH_PROG(FLEX_PATH, flex, no)
 if test x$FLEX_PATH = xno; then
   AC_MSG_ERROR(Could not find flex)
