--- a/gstreamer/debian/control
+++ b/gstreamer/debian/control
@@ -2,16 +2,14 @@ Source: gstreamer
 Section: libs
 Priority: optional
 Maintainer: David I. Lehn <dlehn@vt.edu>
-Build-Depends: debhelper (>= 3.0.0), libxml2-dev (>= 2.4.16), zlib1g-dev (>= 1:1.1.4), libglib2.0-dev (>= 2.0.1), pkg-config (>= 0.11.0), libpopt-dev, bison, flex
-Build-Depends-Indep: debhelper (>= 3.0.0), gtk-doc-tools (>= 0.4), jade (>= 1.2.1), transfig (>= 3.2.3.c), docbook-utils (>= 0.6.9), xsltproc (>= 1.0.6), gs
+Build-Depends: debhelper (>= 3.0.0), libxml2-dev (>= 2.4.16), zlib1g-dev (>= 1:1.1.4), libglib2.0-dev (>= 2.0.4), pkg-config (>= 0.11.0), libpopt-dev, bison, flex
+Build-Depends-Indep: debhelper (>= 3.0.0), gtk-doc-tools (>= 0.4), jade (>= 1.2.1), transfig (>= 3.2.3.c), docbook-utils (>= 0.6.9), xsltproc (>= 1.0.6), gs, python (>= 2.1)
 Standards-Version: 3.5.6
 
-Package: libgstreamer0.3.4
+Package: libgstreamer0.4.0
 Architecture: [alpha arm hppa i386 mips mipsel powerpc sparc]
 Section: libs
 Depends: ${shlibs:Depends}
-Conflicts: libgstreamer0.3.3
-Replaces: libgstreamer0.3.3
 Suggests: gstreamer-core, gstreamer-misc
 Description: Core GStreamer shared library
  Core GStreamer shared library
@@ -19,7 +17,7 @@ Description: Core GStreamer shared library
 Package: libgstreamer-dev
 Architecture: any
 Section: devel
-Depends: libgstreamer0.3.4 (= ${Source-Version}), libc6-dev, pkg-config, libpopt-dev, libglib2.0-dev
+Depends: libgstreamer0.4.0 (= ${Source-Version}), libc6-dev, pkg-config, libpopt-dev, libglib2.0-dev
 Recommends: gstreamer-doc (= ${Source-Version})
 Description: GStreamer development libraries and headers
  GStreamer development libraries and headers
@@ -77,7 +75,7 @@ Description: Core element and library plugins for GStreamer
   * standard scheduler
   * type detection support
 
-Package: gstreamer-lib-core
+Package: gstreamer-core-libs
 Architecture: any
 Section: libs
 Depends: ${shlibs:Depends}
@@ -88,10 +86,10 @@ Description: Core library plugins for GStreamer
   * putbits
   * getbits
 
-Package: gstreamer-lib-core-dev
+Package: gstreamer-core-libs-dev
 Architecture: any
 Section: devel
-Depends: gstreamer-lib-core
+Depends: gstreamer-core-libs
 Description: Development files for core library plugins for GStreamer
  Development files for core library plugins for GStreamer
- Includes headers for library plugins from gstreamer-lib-core
+ Includes headers for library plugins from gstreamer-core-libs
